Updated with version: 3.30.1 changes

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -987,6 +987,18 @@
     "message":"литовски + EasyList",
     "description":"A filter list combined with EasyList"
   },
+  "filtereasylist_plus_vietnamese":{
+    "message":"виетнамски",
+    "description":"A filter list combined with EasyList"
+  },
+  "filter_easylist_plus_vietnamese":{
+    "message":"виетнамски + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
+  "filterbrazilian_portuguese":{
+    "message":"португалски (Бразилия)",
+    "description":"A filter list"
+  },
   "other":{
     "message":"друг",
     "description":"Multiple choice option"
@@ -1820,5 +1832,41 @@
   "local_cdn_option":{
     "message":"Разреши местно кеширане на съдържанието за библиотеките на популярни сайтове",
     "description":"Option to let the user enable Local CDN feature."
+  },
+  "myadblockoptions":{
+    "message":"МоятАдблок",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Options page"
+  },
+  "newmyadblockenrollment":{
+    "message":"НОВО",
+    "description":"The text of the 'Enable MyAdBlock' menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockenrollment":{
+    "message":"Разреши МоятАдблок",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockoptionspageheader":{
+    "message":"Настройки на МоятАдблок",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockoptionscategoryheader":{
+    "message":"Категории",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockpicreplacementswitchlabel":{
+    "message":"Замяна на определени блокирани реклами с висококачествени картини от категориите по-долу:",
+    "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "catchannelswitchlabel":{
+    "message":"Котки",
+    "description":"The label text for the cat switch on the MyAdBlock Options page"
+  },
+  "dogchannelswitchlabel":{
+    "message":"Кучета",
+    "description":"The label text for the dog switch on the MyAdBlock Options page"
+  },
+  "landscapechannelswitchlabel":{
+    "message":"Пейзажи",
+    "description":"The label text for the Landscape switch on the MyAdBlock Options page"
   }
 }
