--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -987,6 +987,10 @@
     "message":"Litauisch + EasyList",
     "description":"A filter list combined with EasyList"
   },
+  "filtereasylist_plus_vietnamese":{
+    "message":"Vietnamesisch",
+    "description":"A filter list combined with EasyList"
+  },
   "other":{
     "message":"nichtgelistete Sprache",
     "description":"Multiple choice option"
