--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -915,6 +915,10 @@
     "message":"Lithuanian + EasyList",
     "description":"A filter list combined with EasyList"
   },
+  "filtereasylist_plus_vietnamese":{
+    "message":"Vietnamese",
+    "description":"A filter list combined with EasyList"
+  },
   "other":{
     "message":"Iba pa",
     "description":"Multiple choice option"
