--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -987,6 +987,10 @@
     "message":"리투아니아어 + EasyList",
     "description":"A filter list combined with EasyList"
   },
+  "filtereasylist_plus_vietnamese":{
+    "message":"베트남어",
+    "description":"A filter list combined with EasyList"
+  },
   "other":{
     "message":"기타 언어",
     "description":"Multiple choice option"
