--- a/_locales/lv/messages.json
+++ b/_locales/lv/messages.json
@@ -1285,6 +1285,10 @@
     "message":"Lūdzu ejiet uz [[mūsu atbalsta mājaslapu]].",
     "description":"Error message shown when the server has an unrecoverable error during the submission of an ad or bug report."
   },
+  "adreport_server_response_error__manual_msg_step2":{
+    "message":"Un manuāli izveidojiet biļeti, nokopējiet un ielīmējiet sniegto informāciju sadaļā \"Fill in any details you think will help us understand your issue\".",
+    "description":"Error message shown when the server has an unrecoverable error during the submission of an ad or bug report."
+  },
   "custom_filters_migration_error_message_part1":{
     "message":"Pielāgotu filtru kļūdu skaits: ",
     "description":"Part one of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
