--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -987,6 +987,10 @@
     "message":"Lithuania + EasyList",
     "description":"A filter list combined with EasyList"
   },
+  "filtereasylist_plus_vietnamese":{
+    "message":"Vietnam",
+    "description":"A filter list combined with EasyList"
+  },
   "other":{
     "message":"Lain-lain",
     "description":"Multiple choice option"
