--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -80,11 +80,11 @@
     "description":"'Block an ad' wizard attribute choice page"
   },
   "blacklisternotsure":{
-    "message":"Ikke sikker? bare klikk 'Blokker!' nedenfor.",
+    "message":"Ikke sikker? Bare klikk 'Blokker den!' nedenfor.",
     "description":"'Block an ad' wizard attribute choice page"
   },
   "blacklisterthefilter":{
-    "message":"Filteret, som kan bli forandret under innstillingssiden:",
+    "message":"Filteret, som kan bli endres i innstillingene:",
     "description":"'Block an ad' wizard attribute choice page"
   },
   "blacklisteroptionstitle":{
@@ -320,7 +320,7 @@
     "description":"Label for filter list subscription"
   },
   "updatedhourago":{
-    "message":"oppdatert for en time siden",
+    "message":"oppdatert for én time siden",
     "description":"Label for filter list subscription"
   },
   "updateddayago":{
@@ -360,7 +360,7 @@
     "description":"Error alert when subscribing to a filter list"
   },
   "removefromlist":{
-    "message":"Fjern fra liste",
+    "message":"Fjern fra listen",
     "description":"Label to remove a custom filter list"
   },
   "you_know_thats_a_bad_idea_right":{
@@ -384,19 +384,19 @@
     "description":"Update filters text and button"
   },
   "orenteraurl":{
-    "message":"Eller skriv en URL:",
+    "message":"Eller skriv inn en URL:",
     "description":"Text box to enter a link to a custom filter list"
   },
   "subscribebutton":{
-    "message":"Abboner",
+    "message":"Abonner",
     "description":"Subscribe to a filter list button"
   },
   "showlinkstolists2":{
-    "message":"Vis linker til filterlistene",
+    "message":"Vis lenker til filterlistene",
     "description":"Label to display filter list links"
   },
   "filterantisocial":{
-    "message":"Antisosial filterliste (tar bort knapper for sosiale media)",
+    "message":"Antisosial filterliste (Fjerner knapper for sosiale medier)",
     "description":"A filter list"
   },
   "filterannoyances":{
@@ -404,7 +404,7 @@
     "description":"A filter list"
   },
   "filterwarning_removal":{
-    "message":"Adblock liste for fjerning av advarsel (fjerner advarsler om bruk av filtre)",
+    "message":"Adblock Warning Removal List (Fjerner advarsler om bruk av reklameblokkerere)",
     "description":"A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
   },
   "filteracceptable_ads":{
@@ -496,7 +496,7 @@
     "description":"Subtitle on the 'Customize' tab"
   },
   "linkblockadbyurl":{
-    "message":"Blokker en annonse ved dens URL",
+    "message":"Blokker en annonse gjennom dens URL",
     "description":"Link label on the 'Customize' tab"
   },
   "linkhidesection":{
@@ -516,7 +516,7 @@
     "description":"Message of the CSS-hiding section (Hide a section of a webpage) on the Customize tab"
   },
   "excludedomainorurl":{
-    "message":"Domenet eller urlen hvor AdBlock ikke skal blokkere noe",
+    "message":"Domenet eller nettadressen hvor AdBlock ikke skal blokkere noe",
     "description":"Message of the exclude section (Show ads on a webpage or domain) on the Customize tab"
   },
   "blockdomain":{
@@ -536,7 +536,7 @@
     "description":"Subtitle on the 'Customize' tab"
   },
   "filtersavewarning":{
-    "message":"Vær forsiktig: hvis du gjør en feil her kan mange andre filtere, inkludert de offisielle, bli ødelagt!\nLes [[filtersyntax-veiledningen]] for å lære hvordan du kan legge til avanserte svarteliste- og hvitelistefiltere.",
+    "message":"Vær forsiktig: hvis du gjør en feil her kan mange andre filtere, inkludert de offisielle, bli ødelagt!\nLes [[filtersyntax-veiledningen]] for å lære hvordan du kan legge til avanserte svarteliste- og hvitelistefiltre.",
     "description":"Warning when manually editing filters."
   },
   "filtersavewarning_ytadblock_1":{
@@ -556,7 +556,7 @@
     "description":"Button to delete error messages when adding custom filters manually"
   },
   "contentblockingwarning":{
-    "message":"Merk: Hvitlisting (tillater annonser på) en side eller webområde støttes ikke med Safari når innholdsblokkering er aktivert.",
+    "message":"Merk: Hvitlisting (Å tillate annonser) på en side eller nettsted, støttes ikke med Safari når innholdsblokkering er aktivert.",
     "description":"Notice shown on the 'Customize' tab of the options page when Safari Content Blocking is enabled"
   },
   "savebutton":{
@@ -604,11 +604,11 @@
     "description":"On the ad report page, the ads the user is seeing might be caused by malware\/adware"
   },
   "malwarenotfound":{
-    "message":"Vi kan ikke finne skadevare vi kjenner igjen.",
+    "message":"Ingen kjente skadevarer ble funnet.",
     "description":"On the ad report page, the ads the user is seeing are probably not caused by malware\/adware"
   },
   "disableaa":{
-    "message":"Sjekk Akseptabel Annonser filtre:",
+    "message":"Sjekk \"Akseptable reklamer\"-filterne:",
     "description":"Section header on the ad report page"
   },
   "clickdisableaa":{
@@ -616,11 +616,11 @@
     "description":"Instruction on ad report page"
   },
   "aamessageadreport":{
-    "message":"Hvis du ikke vil se annonser som dette, kan du la Akseptabel Annonser filterlisten deaktivert.",
+    "message":"Hvis du ikke vil se annonser som dette, kan du la \"Akseptable reklamer\"-filterlisten stå avskrudd.",
     "description":"Acceptable Ads message on ad report page"
   },
   "aalinkadreport":{
-    "message":"Finn ut mer om Akseptabel Annonse programmet.",
+    "message":"Finn ut mer om \"Akseptable reklamer\"-programmet.",
     "description":"Acceptable Ads link message on ad report page"
   },
   "adreportthanks":{
@@ -640,7 +640,7 @@
     "description":"Instruction on ad report page"
   },
   "adstillappear":{
-    "message":"Er den fremdeles der?",
+    "message":"Er reklamen fortsatt til stede?",
     "description":"Question on ad report page"
   },
   "yes":{
@@ -680,11 +680,11 @@
     "description":"On the ad report page, alert notifying users that they will need to manually reenable the extensions"
   },
   "tabreloadcomplete":{
-    "message":"Ferdig! Vi oppdaterte siden med annonsen. Sjekk siden om annonsen er borte. Deretter kom tilbake til denne siden og besvare spørsmålet nedenfor.",
+    "message":"Ferdig! Vi gjeninnlastet siden med annonsen. Sjekk den siden for å se om annonsen er borte. Kom deretter tilbake til denne siden og svar på spørsmålet nedenfor.",
     "description":"On the ad report page, alert notifying users that we've disabled all other extensions"
   },
   "disableforchromeandsafaristeptwo":{
-    "message":"Fjern krysset ved Aktiver ved alle utvidelser unntatt for AdBlock. La AdBlock være aktivert.",
+    "message":"Fjern avkrysningen av \"Aktiver\" ved alle utvidelser, unntatt AdBlock. La AdBlock forbli aktivert.",
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
@@ -700,11 +700,11 @@
     "description":"Step 2 for disabling Edge extensions"
   },
   "reenableadsonebyone":{
-    "message":"Utmerket! Nå la oss finne ut hvilke utvidelser som er årsaken. Gå og aktivere hver utvidelse enkeltvis. Utvidelsen som bringer tilbake den annonsen(e) er det du trenger å avinstallere for å kvitte deg med annonsene.",
+    "message":"Utmerket! La oss nå finne ut hvilken utvidelse som er årsaken. Gå gjennom og aktiver hver utvidelse enkeltvis. Den utvidelsen som bringer tilbake den annonsen(e), er det du må avinstallere for å kvitte deg med annonsene.",
     "description":"Tells the user to re-enable the extensions one by one"
   },
   "correctfilters":{
-    "message":"Kontroller at du bruker riktig språk filter(e):",
+    "message":"Sjekk at du bruker riktig språkfilter(e):",
     "description":"On the ad report page, label describing having the right filter lists enabled"
   },
   "pagelanguagecheck":{
@@ -827,6 +827,46 @@
     "message":"Tyrkisk",
     "description":"Language name"
   },
+  "lang_catalan":{
+    "message":"Katalansk",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"Kinesisk forenklet",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"Kinesisk (tradisjonell)",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"Kroatisk",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"Norsk",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"Serbisk",
+    "description":"Language name"
+  },
+  "lang_slovenian":{
+    "message":"Slovensk",
+    "description":"Language name"
+  },
+  "lang_vietnamese":{
+    "message":"Vietnamesisk",
+    "description":"Language name"
+  },
+  "lang_portuguese_brazil":{
+    "message":"Portugisisk (Brasil)",
+    "description":"Language name"
+  },
+  "lang_portuguese_portugal":{
+    "message":"Portugisisk (Portugal)",
+    "description":"Language name"
+  },
   "filtereasylist_plus_bulgarian":{
     "message":"Bulgarsk",
     "description":"A filter list"
@@ -947,6 +987,10 @@
     "message":"Litauisk + EasyList",
     "description":"A filter list combined with EasyList"
   },
+  "filtereasylist_plus_vietnamese":{
+    "message":"Vietnamesisk",
+    "description":"A filter list combined with EasyList"
+  },
   "other":{
     "message":"Annet",
     "description":"Multiple choice option"
@@ -1018,7 +1062,7 @@
     "description":"Instruction for how to check Chrome for a reported ad"
   },
   "ff_checkinchrome_4":{
-    "message":"Last ned siden i Chrome med annonsen.",
+    "message":"Last inn siden i Chrome med annonsen.",
     "description":"Instruction for how to check Chrome for a reported ad"
   },
   "ff_checkinchrome_5":{
@@ -1112,7 +1156,7 @@
     "description":"Generic message for buttons that close a view or window"
   },
   "loading":{
-    "message":"LASTER...",
+    "message":"Laster inn…",
     "description":"Generic message displayed during processes that take some time"
   },
   "flashads":{
@@ -1120,7 +1164,7 @@
     "description":"Title of the final ad report question if the ad didn't appear in Firefox"
   },
   "cantblockflashwarning":{
-    "message":"Vises annonsen i eller før en film eller hvilket som helst annet objekt som et Flash-spill?",
+    "message":"Vises annonsen under eller før en film, eller ethvert annet objekt som et Flash-spill?",
     "description":"Text of the final ad report question"
   },
   "cantblockflash":{
@@ -1143,6 +1187,10 @@
     "message":"Deaktiver på sider under dette domenet",
     "description":"Menu entry to open the whitelist wizard"
   },
+  "dont_run_on_pages_on_site":{
+    "message":"Deaktiver på sider under dette nettstedet",
+    "description":"Menu entry to open the whitelist wizard"
+  },
   "disabled_on_this_page":{
     "message":"AdBlock er deaktivert på denne siden.",
     "description":"Message shown in toolbar button on web pages that have been whitelisted"
@@ -1163,13 +1211,37 @@
     "message":"AdBlock er satt på pause.",
     "description":"Message shown in toolbar button when AdBlock is not running"
   },
+  "status_universal_paused":{
+    "message":"AdBlock er midlertidig stanset på alle nettsider.",
+    "description":"Message shown in toolbar button when AdBlock is not running on all domains"
+  },
+  "status_domain_paused":{
+    "message":"AdBlock er pauset på dette nettstedet.",
+    "description":"Message shown in toolbar button when AdBlock is not running on a specific domain"
+  },
+  "resume_blocking_ads":{
+    "message":"Gjenoppta blokkering av annonser",
+    "description":"Link text to start blocking ads again, displayed immediately after 'AdBlock is paused on this site' or 'AdBlock is paused on all sites'"
+  },
   "unpause_adblock":{
     "message":"Start AdBlock igjen",
     "description":"Link text to start blocking ads again, displayed immediately after 'AdBlock is paused'"
   },
+  "domain_unpause_adblock":{
+    "message":"Gjenopprett AdBlock på dette nettstedet",
+    "description":"Link text to start blocking ads again, displayed immediately after 'AdBlock is paused on this site'"
+  },
   "pause_adblock":{
     "message":"Sett AdBlock på pause",
     "description":"Menu entry to pause AdBlock (stop blocking ads)"
+  },
+  "pause_adblock_everywhere":{
+    "message":"Pause på alle nettsider",
+    "description":"Menu entry to pause AdBlock everywhere (stop blocking ads)"
+  },
+  "domain_pause_adblock":{
+    "message":"Pause på dette nettstedet",
+    "description":"Menu entry to pause AdBlock on this domain (stop blocking ads)"
   },
   "unpause_adblocking":{
     "message":"Fortsett reklameblokkeringen igjen",
@@ -1196,11 +1268,15 @@
     "description":"Title of a notification shown to Safari Content Blocking users with too many filter list rules."
   },
   "safarinotificationbody":{
-    "message":"Deaktiver noen filterlister. Mer informasjon i AdBlock's alternativer.",
+    "message":"Vennligst deaktiver noen filterlister. Mer informasjon i AdBlocks innstillinger.",
     "description":"Body of a notification shown to Safari Content Blocking users with too many filter list rules."
   },
   "undo_last_block":{
-    "message":"Angre all blokkering på dette domene",
+    "message":"Angre all mine blokkeringer på dette domenet",
+    "description":"Menu entry to let the user cancel the result of running the blacklist wizard."
+  },
+  "undo_last_block_site":{
+    "message":"Angre all blokkering på dette nettstedet",
     "description":"Menu entry to let the user cancel the result of running the blacklist wizard."
   },
   "dont_run_on_this_page":{
@@ -1208,7 +1284,7 @@
     "description":"Menu entry to whitelist the current page"
   },
   "options":{
-    "message":"Valg",
+    "message":"Innstillinger",
     "description":"The text of the link on chrome:\/\/chrome\/extensions that takes you to the Options page"
   },
   "hide_this_button":{
@@ -1268,7 +1344,7 @@
     "description":"Advanced Options page checkbox, which users only need to use if Hulu.com videos break. It directs the user to restart their browser in order for changes to the checkbox to take effect."
   },
   "modifydomain":{
-    "message":"Side:",
+    "message":"Nettsted:",
     "description":"Caption for the whitelist wizard slider that modifies the domain part of a URL"
   },
   "modifypath":{
@@ -1364,7 +1440,7 @@
     "description":"Subtitle on the Filter lists tab: List of filter lists to block ads."
   },
   "otherfilters":{
-    "message":"Andre filtre",
+    "message":"Andre filterlister",
     "description":"Subtitle on the Filter lists tab: List of filter lists to block other elements that are not ads."
   },
   "customfilters":{
@@ -1386,7 +1462,7 @@
     }
   },
   "languagedropdowndescription":{
-    "message":"Legg til filter for et annet språk: ",
+    "message":"Legg til filtre for et annet språk: ",
     "description":"Dropdown list for language-specific filter lists"
   },
   "how":{
@@ -1398,7 +1474,7 @@
     "description":"Text of a link pointing to the explanation of a new feature"
   },
   "selectlanguage":{
-    "message":" --Velg språk-- ",
+    "message":" — Velg språk — ",
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
@@ -1462,7 +1538,7 @@
     "description":"Link to display the changelog on the Support tab"
   },
   "englishonly":{
-    "message":"Bare Engelsk",
+    "message":"Kun på engelsk",
     "description":"Lets the user know that a link\/page is only available in English."
   },
   "foundbug":{
@@ -1590,7 +1666,7 @@
     "description":"Resource list page: domain name of the frame"
   },
   "frameurl":{
-    "message":"Ramme Lenke: ",
+    "message":"Rammens nettadresse: ",
     "description":"Resource list page: full URL of the frame"
   },
   "legend":{
@@ -1598,7 +1674,7 @@
     "description":"Resource list page: followed by color codes for various resource statuses (blocked, whitelisted, hidden)"
   },
   "blockedresource":{
-    "message":"Blokkerte ressurs",
+    "message":"Blokkert ressurs",
     "description":"Resource list page: resource status"
   },
   "whitelistedresource":{
@@ -1736,5 +1812,17 @@
   "custom_filters_migration_error_message_part3":{
     "message":"Opprinnelig oppføring: ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
+  },
+  "show_language_options":{
+    "message":"La meg velge AdBlocks visningsspråk",
+    "description":"Option to let the user choose AdBlock's display language."
+  },
+  "display_language_selector":{
+    "message":"Vis AdBlock i",
+    "description":"Text shown before language selector drop-down."
+  },
+  "local_cdn_option":{
+    "message":"Aktiver lokalt innhold hurtigbufring for populære nettside biblioteker",
+    "description":"Option to let the user enable Local CDN feature."
   }
 }
