--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -979,6 +979,10 @@
     "message":"Litouws + EasyList",
     "description":"A filter list combined with EasyList"
   },
+  "filtereasylist_plus_vietnamese":{
+    "message":"Vietnamees",
+    "description":"A filter list combined with EasyList"
+  },
   "other":{
     "message":"Anders",
     "description":"Multiple choice option"
