--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -543,6 +543,10 @@
     "message":"Encontrou um anúncio numa página da web? Nós vamos ajudá-lo a encontrar o lugar certo para denunciá-lo!",
     "description":"Introduction of the ad reporting page"
   },
+  "adreportvoluntary":{
+    "message":"Reportar anúncios é voluntário. Ajuda outras pessoas ao permitir que os responsáveis pela lista de filtro bloqueiem o anúncio para todos. Se não te sentes altruísta agora, tudo okay. Feche esta página e [[bloqueie o anúncio]] apenas para si mesmo.",
+    "description":"Introduction of the ad reporting page"
+  },
   "malwarenotificationcheckboxmessage":{
     "message":"O AdBlock deve notificá-lo quando detecta malware?",
     "description":"Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
@@ -1488,6 +1492,10 @@
   "acceptableadsdisable_how_to_reenable":{
     "message":"Pode ligar isto novamente e suportar os sites que ama bastando selecionar \"Permitir alguma publicidade não intrusiva\" abaixo.",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
+  },
+  "content_blocking_acceptable_ads_disbled_message":{
+    "message":"Desativamos o Bloqueio de Conteúdo do Safari porque optou por permitir anúncios não-intrusivos. Só pode selecionar um de cada vez. ([[Porquê?]])",
+    "description":"Warning shown when the Acceptable Ads filter list is enabled while Safari Content Blocking was already enabled."
   },
   "adreport_laststep":{
     "message":"Última etapa: reportar o problema.",
