--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -987,6 +987,10 @@
     "message":"Литовский + EasyList",
     "description":"A filter list combined with EasyList"
   },
+  "filtereasylist_plus_vietnamese":{
+    "message":"Вьетнамский",
+    "description":"A filter list combined with EasyList"
+  },
   "other":{
     "message":"Другой",
     "description":"Multiple choice option"
