--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -987,6 +987,10 @@
     "message":"Litvanca + EasyList",
     "description":"A filter list combined with EasyList"
   },
+  "filtereasylist_plus_vietnamese":{
+    "message":"Vietnamca",
+    "description":"A filter list combined with EasyList"
+  },
   "other":{
     "message":"Diğer",
     "description":"Multiple choice option"
