--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -987,6 +987,18 @@
     "message":"立陶宛文 + EasyList",
     "description":"A filter list combined with EasyList"
   },
+  "filtereasylist_plus_vietnamese":{
+    "message":"越南文",
+    "description":"A filter list combined with EasyList"
+  },
+  "filter_easylist_plus_vietnamese":{
+    "message":"越南文 + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
+  "filterbrazilian_portuguese":{
+    "message":"巴西葡萄牙文",
+    "description":"A filter list"
+  },
   "other":{
     "message":"其它",
     "description":"Multiple choice option"
