--- a/_locales/gl/messages.json
+++ b/_locales/gl/messages.json
@@ -987,6 +987,10 @@
     "message":"Lituano + EasyList",
     "description":"A filter list combined with EasyList"
   },
+  "filtereasylist_plus_vietnamese":{
+    "message":"Vietnamita",
+    "description":"A filter list combined with EasyList"
+  },
   "other":{
     "message":"Outro",
     "description":"Multiple choice option"
